--- a/GemSwapper/res/layout/activity_main.xml
+++ b/GemSwapper/res/layout/activity_main.xml
@@ -17,54 +17,69 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="60dp"
         android:orientation="vertical" >
         
-        <TextView
-            android:id="@+id/start_game"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/start_game" />
-        
-        <TextView
-            android:id="@+id/how_to"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/how_to_play" />
-        
-        <TextView
-            android:id="@+id/achievements"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/achievements" />
-        
-        <TextView
-            android:id="@+id/high_score"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/high_score" />
-        
-        <TextView
-            android:id="@+id/credits"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/credits" />
-        
-        <TextView
-            android:id="@+id/quit_game"
-            style="@style/MenuFont"
-            android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/quit_game" />
-        
-        
+     	<ImageButton 
+     	    android:id="@+id/start_game_button"
+     	    android:background="@drawable/start_game_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="15dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	
+     	<ImageButton 
+     	    android:id="@+id/howToPlay_button"
+     	    android:background="@drawable/how_to_play_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="3dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	     	
+     	<ImageButton 
+     	    android:id="@+id/achievements_button"
+     	    android:background="@drawable/achievements_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="3dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	     	     	
+     	<ImageButton 
+     	    android:id="@+id/high_score_button"
+     	    android:background="@drawable/high_score_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="3dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	     	     	     	
+     	<ImageButton 
+     	    android:id="@+id/credits_button"
+     	    android:background="@drawable/credits_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="3dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	     	     	     	     	
+     	<ImageButton 
+     	    android:id="@+id/quit_game_button"
+     	    android:background="@drawable/quit_game_01"
+     	    android:layout_height="wrap_content"
+     	    android:layout_width="wrap_content"
+     	    android:layout_gravity="center"
+     	    android:layout_marginTop="3dp"
+     	    android:contentDescription="@string/imageDescription"
+     	    />
+     	
+ 
     </LinearLayout>
 
 </RelativeLayout>
