--- a/GemSwapper/res/layout/activity_main.xml
+++ b/GemSwapper/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
      	    android:layout_height="wrap_content"
      	    android:layout_width="wrap_content"
      	    android:layout_gravity="center"
-     	    android:layout_marginTop="15dp"
+     	    android:layout_marginTop="3dp"
      	    android:contentDescription="@string/imageDescription"
      	    />
      	
@@ -76,6 +76,7 @@
      	    android:layout_width="wrap_content"
      	    android:layout_gravity="center"
      	    android:layout_marginTop="3dp"
+     	    android:layout_marginBottom="3dp"
      	    android:contentDescription="@string/imageDescription"
      	    />
      	
