--- a/GemSwapper/res/layout/activity_highscore.xml
+++ b/GemSwapper/res/layout/activity_highscore.xml
@@ -1,29 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<?xml version="1.0" encoding="utf-8"?>
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="7dp"
-    >
-	<TextView  
-	android:id="@+id/placement"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:textAppearance="?android:attr/textAppearanceMedium"
-    android:padding="2dp"
-    android:textSize="20dp" />
-	
-    <TextView  
-	android:id="@+id/name"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:padding="2dp"
-    android:textSize="20dp" />
-    
-    <TextView  
-	android:id="@+id/score"
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:padding="2dp"
-    android:textSize="20dp" />
+    android:layout_height="fill_parent" >
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:padding="5dp" >
+
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:padding="5dp" />
+    </LinearLayout>
+
+</TabHost>
