--- a/GemSwapper/res/layout/activity_high_score_achievements.xml
+++ b/GemSwapper/res/layout/activity_high_score_achievements.xml
@@ -2,7 +2,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:padding="7dp" >
+    android:background="#33CCFF">
     
     <TextView
         android:id="@+id/placement"
