--- a/GemSwapper/res/layout/activity_high_score_score.xml
+++ b/GemSwapper/res/layout/activity_high_score_score.xml
@@ -2,7 +2,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:padding="7dp">
+    android:background="#33CCFF">
     
 	<TextView  
 	android:id="@+id/placement"
