--- a/GemSwapper/res/layout/listplaceholder.xml
+++ b/GemSwapper/res/layout/listplaceholder.xml
@@ -1,7 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">	
+    android:layout_height="fill_parent"
+    android:background="#33CCFF">	
 
     <ListView
 	 	android:id="@id/android:list"
