--- a/GemSwapper/res/menu/activity_highscore.xml
+++ b/GemSwapper/res/menu/activity_highscore.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
-        android:title="@string/menu_settings"/>
+        android:title="@string/menu_settings"
+        android:background="#33CCFF"/>
 
 </menu>
