--- a/GemSwapper/res/layout/activity_credits.xml
+++ b/GemSwapper/res/layout/activity_credits.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
     
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:contentDescription="@string/imageDescription"
+        android:src="@drawable/background" />
+    
     <TextView
         android:id="@+id/creditsMain"
         style="@style/MenuFont"
